--- a/course-project-starting-setup/public/manifest.json
+++ b/course-project-starting-setup/public/manifest.json
@@ -1,22 +1,50 @@
-/*
-Manifest Properties
-JSON file
-
-"name":
-"short_name":
-"start_url":
-"scope": .. Which pages are included in "PWA Experience"
-"display": "standalone" .. Should it look like a standalone app?
-"background_color":
-"theme_color": .. e.g. on top bar in task switcher
-"description":
-"dir": "ltr" .. Read diretion of my app
-"lang": .. Main language of app
-"orientation": "portrait-primary": .. Set default orientation
-"icons":
-"related_applications":
- */
- 
 {
-
+    "name": "Instagram as Progress Web App",
+    "short_name": "PWAGram",
+    "icons": [
+        {
+            "src": "/src/images/icons/app-icon-48x48.png",
+            "type": "image/png",
+            "sizes": "48x48"
+        },
+        {
+            "src": "/src/images/icons/app-icon-96x96.png",
+            "type": "image/png",
+            "sizes": "96x96"
+        },
+        {
+            "src": "/src/images/icons/app-icon-144x144.png",
+            "type": "image/png",
+            "sizes": "144x144"
+        },
+        {
+            "src": "/src/images/icons/app-icon-192x192.png",
+            "type": "image/png",
+            "sizes": "192x192"
+        },
+        {
+            "src": "/src/images/icons/app-icon-256x256.png",
+            "type": "image/png",
+            "sizes": "256x256"
+        },
+        {
+            "src": "/src/images/icons/app-icon-384x384.png",
+            "type": "image/png",
+            "sizes": "384x384"
+        },
+        {
+            "src": "/src/images/icons/app-icon-512x512.png",
+            "type": "image/png",
+            "sizes": "512x512"
+        }
+    ],
+    "short_url": "/index.html", 
+    "scope": ".",
+    "display": "standalone",
+    "orientation": "portrait-primary",
+    "background_color": "#fff",
+    "theme_color": "#FF0000",
+    "description": "A simple instagram Clone, implementing a lot of PWA love.",
+    "dir": "ltr",
+    "lang": "en-US"
 }
