--- a/course-project-starting-setup/public/manifest.json
+++ b/course-project-starting-setup/public/manifest.json
@@ -38,7 +38,7 @@
             "sizes": "512x512"
         }
     ],
-    "short_url": "/index.html", 
+    "start_url": "/index.html", 
     "scope": ".",
     "display": "standalone",
     "orientation": "portrait-primary",
